# eve-api

./: .pre-commit-config.yaml  .pylintrc  .secrets.baseline  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: quickstart.py  tutorial.ipynb
src/eve_api/: __init__.py  _version.py  auth.py  client.py  exceptions.py  response.py
tests/: conftest.py  test_auth.py  test_client.py
