[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eve-api"
dynamic = ["version"]
description = "Minimal authenticated HTTP client for the EVE (Earth Virtual Expert) API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "GeoSTARS Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Framework :: AsyncIO",
]
keywords = ["earth-observation", "eve", "esa", "api-client"]

dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "respx>=0.21.0",
]

[project.urls]
Repository = "https://github.com/spaceml-org/eve-api"

[tool.hatch.version]
path = "src/eve_api/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/eve_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
