[project]
dynamic = ["version"]
name = "eve-api"
requires-python = ">=3.11"
keywords = ["earth-observation", "eve", "esa", "api-client"]

[tool.poetry]
description = "Minimal authenticated HTTP client for the EVE (Earth Virtual Expert) API"
license = "MIT"
readme = "README.md"
authors = [
  "r-spiewak <63987228+r-spiewak@users.noreply.github.com>",
  "dead-water <james.walsh@trillium.tech>",
  "rramosp",
  "will-fawcett-trillium"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Framework :: AsyncIO",
]
packages = [{include = "eve_api", from = "src"}]
version = "0.0.0"  # Placeholder; gets replaced dynamically by file

[project.urls]
Repository = "https://github.com/FrontierDevelopmentLab/eve-api"

[tool.poetry.dependencies]
python = ">=3.11,<4"
httpx = ">=0.27.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.1"
autoflake = "^2.2.1"
isort = "^5.13.2"
black = "^23.3.0"
mypy = "^1.8.0"
pylint = "^3.2.0"
coverage = "^7.4.1"
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.0.0"
pytest-testdox = "^3.1.0"
pytest-mock = "^3.14.0"
detect-secrets = "^1.5.0"
pytest-env = "^1.1.5"
respx = ">=0.21.0"
pylint-per-file-ignores = "^3.2.0"

[tool.black]
line-length = 79
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | \.git
  | __pycache__
  | \.tox
  | \venv
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 79
skip_glob = [
  '*.parquet',
]
filter_files = true
skip_gitignore = true

[tool.mypy]
exclude = [
  '\.yaml$',
  '\.yml$',
  '\.toml$',
  '\.venv',
]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short --basetemp=/tmp/pytest"

[tool.coverage.run]
source = ["src"]
omit = ["tests/**/conftest.py", "tests/*"]
data_file = "/tmp/eve_api/.coverage"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    "if DEBUG_PRINT:",
    "if DEBUG_PRINTS:",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = true

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
vcs = "none"

[tool.poetry-dynamic-versioning.from-file]
source = "src/eve_api/_version.py"
pattern = "^__version__\\s*=\\s*[\"']?(\\d+\\.\\d+\\.\\d+)[\"']?"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
